--- a/cart.html
+++ b/cart.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book Details | BookStore</title>
+    <title>Cart | BookStore</title>
 
-    <!-- Bootstrap & Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -60,110 +59,103 @@
       </div>
     </nav>
 
-    <!-- ===== Book Details Section ===== -->
-    <section class="py-5 book-details">
+    <!-- ===== Cart Section ===== -->
+    <section class="py-5 cart-page">
       <div class="container">
-        <div class="row g-5">
-          <!-- Book Image -->
-          <div class="col-md-5">
-            <div class="book-image-box border rounded p-3 bg-white shadow-sm">
-              <img src="images/book1.jpeg" alt="Book" class="img-fluid rounded" />
-            </div>
-          </div>
+        <h3 class="fw-bold text-deep-purple mb-4"><i class="bi bi-cart-fill me-2"></i> আপনার কার্ট</h3>
 
-          <!-- Book Info -->
-          <div class="col-md-7">
-            <h3 class="fw-bold text-deep-purple mb-2">তালেবের মাসায়েল</h3>
-            <p class="mb-1 text-muted">লেখক: <a href="#" class="text-deep-purple text-decoration-none fw-semibold">মুফতি শাফায়েত রহমান</a></p>
-            <p class="text-muted mb-3">প্রকাশক: <a href="#" class="text-deep-purple text-decoration-none fw-semibold">দারুসসালাম পাবলিকেশন</a></p>
-
-            <div class="d-flex align-items-center mb-3">
-              <div class="text-warning me-2 fs-5">
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-half"></i>
-                <i class="bi bi-star"></i>
-              </div>
-              <small class="text-muted">(১২০ রিভিউ)</small>
-            </div>
-
-            <div class="price-box mb-3">
-              <span class="text-muted text-decoration-line-through me-2">৳২০০</span>
-              <span class="fw-bold fs-4 text-deep-purple">৳১১০</span>
-              <span class="badge bg-deep-purple ms-2">৪৫% ছাড়</span>
-            </div>
-
-            <p class="small text-muted mb-4">ইসলামিক ফিকহের বিভিন্ন গুরুত্বপূর্ণ মাসায়েল সহজ ভাষায় তুলে ধরা হয়েছে। ছাত্র, শিক্ষক ও সাধারণ পাঠকদের জন্য উপযোগী একটি গ্রন্থ।</p>
-
-            <div class="d-flex align-items-center gap-3 mb-4">
-              <div class="input-group" style="width: 120px">
-                <button class="btn btn-outline-deep-purple btn-sm minus"><i class="bi bi-dash-lg"></i></button>
-                <input type="text" value="1" class="form-control text-center fw-semibold qty-input" />
-                <button class="btn btn-outline-deep-purple btn-sm plus"><i class="bi bi-plus-lg"></i></button>
-              </div>
-
-              <button class="btn btn-deep-purple fw-semibold"><i class="bi bi-cart-fill me-1"></i> কার্টে যুক্ত করুন</button>
-              <button class="btn btn-outline-deep-purple fw-semibold"><i class="bi bi-heart me-1"></i> উইশলিস্ট</button>
-            </div>
-
-            <ul class="list-unstyled small">
-              <li><i class="bi bi-book me-2 text-deep-purple"></i><strong>পৃষ্ঠা:</strong> ২৫৬</li>
-              <li><i class="bi bi-translate me-2 text-deep-purple"></i><strong>ভাষা:</strong> বাংলা</li>
-              <li><i class="bi bi-upc-scan me-2 text-deep-purple"></i><strong>আইএসবিএন:</strong> 978-984-70000</li>
-            </ul>
-          </div>
-        </div>
-
-        <!-- Tabs (Details / Reviews) -->
-        <ul class="nav nav-tabs mt-5" id="bookTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="desc-tab" data-bs-toggle="tab" data-bs-target="#desc" type="button">বিস্তারিত</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="reviews-tab" data-bs-toggle="tab" data-bs-target="#reviews" type="button">রিভিউ</button>
-          </li>
-        </ul>
-        <div class="tab-content p-4 bg-white border border-top-0 rounded-bottom shadow-sm">
-          <div class="tab-pane fade show active" id="desc">
-            <p class="text-muted small">এই বইটিতে ইসলামিক শিক্ষার আলোকে ছাত্র জীবনের গুরুত্বপূর্ণ বিষয়সমূহ আলোচনা করা হয়েছে। লেখক কুরআন-সুন্নাহর আলোকে বাস্তব জীবনঘনিষ্ঠ মাসায়েল উপস্থাপন করেছেন।</p>
-            <p class="text-muted small">বইটি মাদরাসা শিক্ষার্থী, শিক্ষক এবং সাধারণ পাঠকদের জন্য একটি নির্ভরযোগ্য দিকনির্দেশনা হিসেবে বিবেচিত।</p>
-          </div>
-
-          <div class="tab-pane fade" id="reviews">
-            <div class="text-center text-muted small">
-              <i class="bi bi-chat-dots fs-1 text-deep-purple"></i>
-              <p class="mt-2">এখনও কোনো রিভিউ নেই।</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- ===== Related Books ===== -->
-    <section class="py-5 bg-light related-books">
-      <div class="container">
-        <h5 class="fw-bold text-deep-purple mb-4">সম্পর্কিত বই</h5>
         <div class="row g-4">
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <div class="related-book bg-white rounded shadow-sm p-2 text-center">
-              <img src="images/book2.jpg" class="img-fluid rounded mb-2" alt="" />
-              <h6 class="small fw-semibold mb-0">আহমদী বৈঠক</h6>
-              <p class="text-muted small mb-0">৳১২৩</p>
+          <!-- Cart Items -->
+          <div class="col-lg-8">
+            <div class="table-responsive bg-white shadow-sm rounded p-3">
+              <table class="table align-middle mb-0">
+                <thead class="text-muted small border-bottom">
+                  <tr>
+                    <th>বই</th>
+                    <th>মূল্য</th>
+                    <th>পরিমাণ</th>
+                    <th>মোট</th>
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- Item 1 -->
+                  <tr>
+                    <td>
+                      <div class="d-flex align-items-center">
+                        <img src="images/book1.jpeg" alt="Book" class="rounded me-3" style="width: 60px; height: 80px; object-fit: cover" />
+                        <div>
+                          <h6 class="fw-semibold mb-1">তালেবের মাসায়েল</h6>
+                          <small class="text-muted">মুফতি শাফায়েত রহমান</small>
+                        </div>
+                      </div>
+                    </td>
+                    <td>৳১১০</td>
+                    <td style="width: 130px">
+                      <div class="input-group input-group-sm">
+                        <button class="btn btn-outline-deep-purple minus"><i class="bi bi-dash-lg"></i></button>
+                        <input type="text" value="1" class="form-control text-center fw-semibold qty-input" />
+                        <button class="btn btn-outline-deep-purple plus"><i class="bi bi-plus-lg"></i></button>
+                      </div>
+                    </td>
+                    <td class="fw-semibold">৳১১০</td>
+                    <td>
+                      <button class="btn btn-sm text-danger"><i class="bi bi-trash"></i></button>
+                    </td>
+                  </tr>
+
+                  <!-- Item 2 -->
+                  <tr>
+                    <td>
+                      <div class="d-flex align-items-center">
+                        <img src="images/book2.jpg" alt="Book" class="rounded me-3" style="width: 60px; height: 80px; object-fit: cover" />
+                        <div>
+                          <h6 class="fw-semibold mb-1">আহমদী বৈঠক</h6>
+                          <small class="text-muted">হাফিজ ফারুক</small>
+                        </div>
+                      </div>
+                    </td>
+                    <td>৳১২৩</td>
+                    <td style="width: 130px">
+                      <div class="input-group input-group-sm">
+                        <button class="btn btn-outline-deep-purple minus"><i class="bi bi-dash-lg"></i></button>
+                        <input type="text" value="2" class="form-control text-center fw-semibold qty-input" />
+                        <button class="btn btn-outline-deep-purple plus"><i class="bi bi-plus-lg"></i></button>
+                      </div>
+                    </td>
+                    <td class="fw-semibold">৳২৪৬</td>
+                    <td>
+                      <button class="btn btn-sm text-danger"><i class="bi bi-trash"></i></button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+
+            <div class="mt-4">
+              <a href="index.html" class="btn btn-outline-deep-purple btn-sm"><i class="bi bi-arrow-left me-1"></i> কেনাকাটা চালিয়ে যান</a>
             </div>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <div class="related-book bg-white rounded shadow-sm p-2 text-center">
-              <img src="images/book3.jpg" class="img-fluid rounded mb-2" alt="" />
-              <h6 class="small fw-semibold mb-0">আব্বার ব্যথিত হৃদয়</h6>
-              <p class="text-muted small mb-0">৳৯১</p>
-            </div>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <div class="related-book bg-white rounded shadow-sm p-2 text-center">
-              <img src="images/book4.jpg" class="img-fluid rounded mb-2" alt="" />
-              <h6 class="small fw-semibold mb-0">সালাফদের জ্ঞানের পথ</h6>
-              <p class="text-muted small mb-0">৳১৫১</p>
+
+          <!-- Cart Summary -->
+          <div class="col-lg-4">
+            <div class="bg-white shadow-sm rounded p-4">
+              <h5 class="fw-bold text-deep-purple mb-3">কার্ট সারাংশ</h5>
+              <div class="d-flex justify-content-between mb-2">
+                <span>উপ-মোট</span>
+                <span>৳৩৫৬</span>
+              </div>
+              <div class="d-flex justify-content-between mb-2">
+                <span>ডেলিভারি চার্জ</span>
+                <span>৳৫০</span>
+              </div>
+              <hr />
+              <div class="d-flex justify-content-between fw-bold fs-6 mb-3">
+                <span>মোট</span>
+                <span class="text-deep-purple">৳৪০৬</span>
+              </div>
+              <a href="checkout.html" class="btn btn-deep-purple w-100 fw-semibold mb-2"><i class="bi bi-bag-check-fill me-1"></i> চেকআউট করুন</a>
+              <button class="btn btn-outline-deep-purple w-100 fw-semibold"><i class="bi bi-heart me-1"></i> উইশলিস্টে সংরক্ষণ করুন</button>
             </div>
           </div>
         </div>
@@ -231,11 +223,9 @@
       </div>
     </footer>
 
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Quantity Script -->
     <script>
+      // Quantity Controls
       document.querySelectorAll('.plus').forEach(btn => {
         btn.onclick = () => {
           const input = btn.parentNode.querySelector('.qty-input')
