--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <!-- Account Links -->
         <div class="header-links text-end">
-          <a href="#" class="text-dark text-decoration-none me-3 fw-semibold">উইশ লিস্ট</a>
+          <a href="wishlist.html" class="text-dark text-decoration-none me-3 fw-semibold">উইশ লিস্ট</a>
           <a href="#" class="btn btn-outline-deep-purple btn-sm fw-semibold">লগইন / রেজিস্টার</a>
         </div>
       </div>
