--- a/wishlist.html
+++ b/wishlist.html
@@ -15,7 +15,7 @@
       <div class="container d-flex justify-content-between align-items-center flex-wrap">
         <!-- Logo -->
         <div class="header-logo">
-          <a href="#"><img src="images/naafiun.webp" alt="BookStore Logo" class="logo-img" /></a>
+          <a href="index.html"><img src="images/naafiun.webp" alt="BookStore Logo" class="logo-img" /></a>
         </div>
 
         <!-- Search Bar -->
@@ -28,7 +28,7 @@
 
         <!-- Account Links -->
         <div class="header-links text-end">
-          <a href="#" class="text-dark text-decoration-none me-3 fw-semibold">উইশ লিস্ট</a>
+          <a href="wishlist.html" class="text-dark text-decoration-none me-3 fw-semibold">উইশ লিস্ট</a>
           <a href="wishlist.html" class="btn btn-outline-deep-purple btn-sm fw-semibold">লগইন / রেজিস্টার</a>
         </div>
       </div>
