--- a/orders.html
+++ b/orders.html
@@ -15,7 +15,7 @@
       <div class="container d-flex justify-content-between align-items-center flex-wrap">
         <!-- Logo -->
         <div class="header-logo">
-          <a href="#"><img src="images/naafiun.webp" alt="BookStore Logo" class="logo-img" /></a>
+          <a href="index.html"><img src="images/naafiun.webp" alt="BookStore Logo" class="logo-img" /></a>
         </div>
 
         <!-- Search Bar -->
